<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Multi-Mania</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_myschedule">My Schedule</string>
    <string name="title_map">Map</string>
    <string name="title_news">News</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="talk_tag" translatable="false">Tags</string>
    <string name="talk_room" translatable="false">Room</string>
    <string name="talk_time" translatable="false">from ...</string>
    <string name="talk_speaker">Speaker</string>
    <string name="talk_info">Info</string>
    <string name="newsitem_info">Info</string>
    <string name="settings_sync">Sync My Schedule with Google Calendar</string>
    <string name="settings_notify">Notify me when one of my favorite keynote begins</string>
    <string name="talk_title" translatable="false">Talk</string>
    <string name="calendar_name" translatable="false">Multi-Mania 2015</string>
    <string name="calendar_account_name">Calendar</string>
    <string name="about_title" translatable="false">Multi-Mania</string>
    <string name="about_info">Get inspired, share knowledge and connect with the creative community!
The Multi-Mania conference has become the annual event that brings together designers, developers, entrepreneurs and creative new media students. The enthusiasm surrounding this event is exciting and inspiring. Each year the conference grows a little bigger and each year the experience gets a little better.</string>
    <string name="name_venue" translatable="false">Kortrijk Xpo Meeting Center</string>
    <string name="street" translatable="false">Doorniksesteenweg 216</string>
    <string name="city" translatable="false">8500 Kortrijk</string>
    <string name="country">Belgium</string>
    <string name="day">day</string>
    <string name="title_activity_talk" translatable="false">Talk</string>
    <string name="speakers">Speakers</string>
    <string name="from">From</string>
    <string name="time">Time</string>
    <string name="favorite">Favorite</string>
    <string name="close">Close</string>
    <string name="twitter_url" translatable="false">https://twitter.com/multimania</string>
    <string name="facebook_url" translatable="false">https://www.facebook.com/MultiManiaBE</string>
    <string name="site_url" translatable="false">http://multi-mania.be/</string>
    <string name="unfavorite_undobar">Removed from favorites</string>
    <string name="notification_text">Will begin in 10 minutes.</string>
    <string name="myschedule_placeholder">Your favorited keynotes will appear here.</string>
    <string name="loading">Loading...</string>
    <string name="stardescription">Favorite Icon</string>
    <string name="title_activity_load" translatable="false">LoadActivity</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_my_schedule">My Schedule</string>
    <string name="nav_map">Map</string>
    <string name="nav_news">News</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="undo_item">Undo</string>
    <string name="title_location">Location</string>
    <string name="account_picker_invalid">No valid account selected</string>
    <string name="account_picker_none">No account selected</string>
    <string name="account_picker_select">Please choose your Google Account</string>
    <string name="nav_account">Login</string>
    <string name="login_description">If you enter your email address we will make sure your favorites are synced across your Android devices.</string>
    <string name="login_button">Pick emailaddress</string>
    <string name="action_account">Add account</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Pick email</string>
    <string name="account_success">Account succesfully set!</string>
    <string name="login_loggedin_description">You\'ve already entered your e-mailaddress.</string>
    <string name="login_button_other_email">Pick other address</string>
    <string name="lunchbreak_starttime" translatable="false">12:30:00</string>
    <string name="lunchbreak_endtime" translatable="false">14:00:00</string>
    <string name="myschedule_timegap_info">We found a gap in your schedule.</string>
    <string name="myschedule_suggestion_time">You can follow another keynote at %1$s to %2$s.</string>
    <string name="action_add">Add</string>
    <string name="Share">Share</string>
    <string name="share_with">Share with</string>
    <string name="imattending">"I'm attending "</string>
    <string name="readmoreatmm">Read more at http://multi-mania.be/</string>
    <string name="hashtag_mm" translatable="false">#multimania</string>
    <string name="settings_suggestion">Suggest keynotes</string>
    <string name="suggestion_show_again">Don\'t show again</string>
    <string name="action_suggestion">Timegaps</string>
    <string name="no_timegap_found">We didn\'t find any timegaps in your schedule.</string>
    <string name="suggestion_added">The item was added to your schedule.</string>
    <string name="suggestion_subtitle">Here are some suggestions:</string>

</resources>
