<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ana.nmct.multimania.ui.TalkFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        >

        <WebView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talk_info"
            android:id="@+id/webTalkInfo"
            android:layout_margin="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_speaker"
            android:id="@+id/txtTalkSpeaker"
            android:layout_below="@id/webTalkInfo"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_time"
            android:id="@+id/txtTalkTime"
            android:layout_below="@id/txtTalkSpeaker"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_room"
            android:id="@+id/txtTalkRoom"
            android:layout_below="@id/txtTalkTime"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_tag"
            android:id="@+id/txtTalkTag"
            android:layout_margin="8dp"
            android:layout_alignBaseline="@id/txtTalkRoom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
</ScrollView>
