<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="3dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/txtRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtTalkTitle"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:text="@string/talk_room" />


        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtTag"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/txtTime"
            android:layout_margin="8dp"
            android:text="@string/talk_time" />

        <TextView
            android:id="@+id/txtTalkTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/txtTime"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/talk_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/txtTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtTime"
            android:layout_alignStart="@+id/txtTime"
            android:layout_alignTop="@+id/txtRoom"
            android:paddingBottom="10dp"
            android:text="@string/talk_tag" />


    </RelativeLayout>
</android.support.v7.widget.CardView>