<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mm_card"
    android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Location"
            android:id="@+id/txtLocation"
            android:padding="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_venue"
            android:id="@+id/txtNameVenue"
            android:layout_below="@+id/txtLocation"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street"
            android:id="@+id/txtStreet"
            android:layout_below="@+id/txtNameVenue"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/txtCity"
            android:layout_below="@+id/txtStreet"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:id="@+id/txtCountry"
            android:layout_below="@+id/txtCity"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:id="@+id/imgAboutMap"
            android:src="@drawable/ic_aboutmap"
            android:layout_below="@+id/txtCountry"
            android:scaleType="centerCrop"/>
    </RelativeLayout>