<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.ana.nmct.multimania.ui.AboutFragment"
    android:padding="8dp"
    android:clipToPadding="false"
    android:scrollbarStyle="outsideOverlay">

    <!-- TODO: Staggered gridview with different types -->


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardMulti"
            card_view:cardCornerRadius="3dp">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
        <ImageView
            android:id="@+id/imgAbout"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_multimania"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Multi-Mania"
            android:id="@+id/txtAboutTitle"
            android:layout_alignBottom="@+id/imgAbout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@color/white"
            android:background="@color/darkTransparent"
            android:padding="8dp"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_info"
            android:id="@+id/txtAboutInfo"
            android:layout_below="@+id/imgAbout"
            android:padding="8dp"
            android:layout_marginBottom="8dp"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardMulti"
            card_view:cardCornerRadius="3dp">
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Location"
                    android:id="@+id/txtLocation"
                    android:padding="8dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_venue"
                    android:id="@+id/txtNameVenue"
                    android:layout_below="@+id/txtLocation"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:id="@+id/txtStreet"
                    android:layout_below="@+id/txtNameVenue"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:id="@+id/txtCity"
                    android:layout_below="@+id/txtStreet"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:id="@+id/txtCountry"
                    android:layout_below="@+id/txtCity"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:id="@+id/imgAboutMap"
                    android:src="@drawable/ic_aboutmap"
                    android:layout_below="@+id/txtCountry"
                    android:scaleType="centerCrop"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>-->
    </RelativeLayout>
</ScrollView>
